<resources>
    <string name="app_name">StudyBuddy</string>
    <string name="userName">forums/chat</string>
    <string name="messageHolderText">Search or Create new chat...</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="studentNumber">StudentNumber:</string>
    <string name="email">E-mail:</string>
    <string name="repeatEmail">Confirm E-mail:</string>
    <string name="password">Password:</string>
    <string name="repeatPassword">Confirm Password:</string>
    <string name="signup">SignUp</string>
    <string name="study_search"> Course Information </string>
    <string name="school_comp">School of Computing</string>
    <string name="ss_text"> Nearly There! \n But first you need to select a few things to find content to study</string>
    <string name="room_select"> Select a Room and Day </string>
    <string name="exam_select"> Select a Course and Year </string>
    <string name="day_TT"> Day </string>
    <string name="time_ETT"> Time </string>
    <string name="time_TT"> Time </string>
    <string name="class_TT"> Class </string>
    <string name="Subject_ETT"> Subject</string>
    <string name="date_ETT"> Date </string>
    <string name="monday"> Monday </string>
    <string name="class_1">BSHC3B: \nWireless Networking</string>
    <string name="examBTN"> Exam Timetable </string>
    <string name="timetableBTN"> Room Timetables </string>
    <string name="TT_heading"> Room Timetable </string>
    <string name="Exam_TT_heading"> Exam Timetable </string>


    <!-- For Study search spinner-->

    <string-array name="TT_spinner_array">
        <item> SCR1 </item>
        <item> SCR2 </item>
        <item> SCR3 </item>
        <item> Oriel Suite </item>
    </string-array>




    <string name="title_activity_nav">NavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string-array name="day_spinner_array">
        <item> Monday </item>
        <item> Tuesday </item>
        <item> Wednesday </item>
        <item> Thursday </item>
        <item> Friday </item>
    </string-array>

    <string-array name="exam_year_spinner">
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
    </string-array>

    <string-array name="exam_course_spinner">
        <item> BSHC </item>
        <item> BAHBME </item>
        <item> BAHHRD </item>
        <item> BAHMRP </item>
        <item> BAMTB </item>
        <item> BSHCBIS </item>
        <item> BSHTM </item>
    </string-array>

    <string name="MP"><a href="http://courses.ncirl.ie/index.cfm/page/course/courseId/1921">BA(HONS) in Marketing Practice</a></string>
    <string name="HRM"><a href="http://courses.ncirl.ie/index.cfm/page/course/courseId/1921">BA(HONS) in HRM</a></string>
    <string name="BUS"><a href="http://courses.ncirl.ie/index.cfm/page/course/courseId/1921">BA(HONS) in Business</a></string>
    <string name="AF"><a href="http://courses.ncirl.ie/index.cfm/page/course/courseId/1921">BA(HONS) in Accounting and Finance</a></string>

    <string name="BIS"><a href="http://courses.ncirl.ie/index.cfm/page/course/courseId/1921">BSc(HONS) in Business Information Systems</a></string>
    <string name="COMP"><a href="http://courses.ncirl.ie/index.cfm/page/course/courseId/1921">BSc(HONS) in Computing</a></string>
    <string name="MTB"><a href="http://courses.ncirl.ie/index.cfm/page/course/courseId/1921">BA in Management of Technology in Business</a></string>
    <string name="TM"><a href="http://courses.ncirl.ie/index.cfm/page/course/courseId/1921">BSc(HONS) in Technology Management</a></string>







</resources>


