<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.liam.studybuddy.SignUp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:id="@+id/firstNameET"
            android:hint="@string/firstName"
            android:textAlignment="center"
            android:singleLine="false"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@+id/firstNameET"
            android:layout_alignLeft="@+id/firstNameET"
            android:layout_alignStart="@+id/firstNameET"
            android:id="@+id/lastNameET"
            android:hint="@string/lastName"
            android:textAlignment="center"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@+id/lastNameET"
            android:layout_alignLeft="@+id/lastNameET"
            android:layout_alignStart="@+id/lastNameET"
            android:id="@+id/firstNameET"
            android:hint="@string/studentNumber"
            android:textAlignment="center"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_below="@+id/firstNameET"
            android:layout_alignLeft="@+id/firstNameET"
            android:layout_alignStart="@+id/firstNameET"
            android:layout_marginTop="20dp"
            android:id="@+id/emailET"
            android:textAlignment="center"
            android:hint="@string/email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_below="@+id/emailET"
            android:layout_alignLeft="@+id/emailET"
            android:layout_alignStart="@+id/emailET"
            android:id="@+id/repeatEmailET"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:hint="@string/repeatEmail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_below="@+id/repeatEmailET"
            android:layout_alignRight="@+id/repeatEmailET"
            android:layout_alignEnd="@+id/repeatEmailET"
            android:id="@+id/passwordET"
            android:textAlignment="center"
            android:hint="@string/password"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_below="@+id/passwordET"
            android:layout_alignRight="@+id/passwordET"
            android:layout_alignEnd="@+id/passwordET"
            android:id="@+id/repeatPasswordET"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:hint="@string/repeatPassword" />

        <Button
            android:text="@string/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/repeatPasswordET"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:id="@+id/signupBTN"
            android:textAlignment="center"
            android:layout_marginTop="20dp" />
    </LinearLayout>

</RelativeLayout>
