<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.liam.studybuddy.Timetable"
    android:layout_marginTop="45dp">

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@android:drawable/arrow_up_float"
        android:id="@+id/backBTN" />

    <!--Layout 1-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="false"
        android:id="@+id/bodyLayout">

        <!--Layout 2-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:id="@+id/headingLayout"
            >

            <TextView
                android:text="@string/Exam_TT_heading"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:id="@+id/headingTV"
                android:layout_weight="0.37"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textAlignment="center"
                android:layout_gravity="center"/>

            <TextView
                android:text="@string/exam_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView13"
                android:layout_weight="0.37"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TT_spinner"
            android:entries="@array/exam_course_spinner"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TT_year"
            android:entries="@array/exam_year_spinner"
            />


        <!--<TableLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:id="@+id/timeTableLayout"-->
            <!--style="@style/timetable_style"-->
            <!--android:paddingBottom="0dp"-->
            <!--android:paddingLeft="0dp"-->
            <!--android:paddingRight="0dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp">-->

            <!--<TableRow-->
                <!--android:layout_height="match_parent"-->
                <!--android:id="@+id/top_row"-->
                <!--android:layout_width="match_parent">-->


        <!--Layout 3-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Layout 4-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:text="@string/time_ETT"
                    android:layout_height="wrap_content"
                    android:id="@+id/time_tv"
                    android:layout_width="60dp"
                    android:layout_weight="1"
                android:textStyle="normal|bold"
                android:textAllCaps="false"
                android:paddingLeft="10dp"
                android:paddingRight="30dp"
                android:background="@drawable/back"/>

                <TextView
                    android:text="@string/Subject_ETT"
                    android:layout_height="wrap_content"
                    android:id="@+id/subject_tv"
                    android:layout_width="100dp"
                    android:layout_weight="1"
                android:textStyle="normal|bold"
                android:paddingLeft="10dp"
                android:paddingRight="60dp"
                android:background="@drawable/back"/>
                <TextView
                    android:text="@string/date_ETT"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_tv"
                    android:layout_width="60dp"
                    android:layout_weight="1"
                android:textStyle="normal|bold"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                    android:background="@drawable/back"/>

            </LinearLayout>
        </LinearLayout>

        <!--</TableRow>-->

            <!--<TableRow-->
                <!--android:layout_height="match_parent"-->
                <!--android:id="@+id/second_row"-->
                <!--android:layout_width="match_parent">-->

        <!--Layout 5-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <!--Layout 7-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/ETTtime"
                    android:layout_weight="1"
                android:background="@drawable/back"
                android:paddingLeft="10dp"
                    android:paddingTop="20dp" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/ETTsubject"
                    android:layout_weight="1"
                android:background="@drawable/back"
                android:paddingLeft="20dp"
                    android:paddingTop="5dp"/>

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/ETTdate"
                    android:layout_weight="1"
                android:background="@drawable/back"
                android:paddingLeft="10dp"
                    android:paddingTop="20dp" />
                </LinearLayout>

                <!--Layout 8-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="fill_parent"
                        android:id="@+id/ETTtime2"
                        android:layout_weight="1"
                        android:background="@drawable/back"
                        android:paddingLeft="10dp"
                        android:paddingTop="20dp"
                        android:text="example" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="fill_parent"
                        android:id="@+id/ETTsubject2"
                        android:layout_weight="1"
                        android:background="@drawable/back"
                        android:paddingLeft="20dp"
                        android:paddingTop="5dp"
                        android:text="example example example example example" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="fill_parent"
                        android:id="@+id/ETTdate2"
                        android:layout_weight="1"
                        android:background="@drawable/back"
                        android:paddingLeft="10dp"
                        android:paddingTop="20dp"
                        android:text="example" />
                </LinearLayout>

                <!--Layout 9-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="fill_parent"
                        android:id="@+id/ETTtime3"
                        android:layout_weight="1"
                        android:background="@drawable/back"
                        android:paddingLeft="10dp"
                        android:paddingTop="20dp"
                        android:text="example" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="fill_parent"
                        android:id="@+id/ETTsubject3"
                        android:layout_weight="1"
                        android:background="@drawable/back"
                        android:paddingLeft="20dp"
                        android:paddingTop="5dp"
                        android:text="example example example example example" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="fill_parent"
                        android:id="@+id/ETTdate3"
                        android:layout_weight="1"
                        android:background="@drawable/back"
                        android:paddingLeft="10dp"
                        android:paddingTop="20dp"
                        android:text="example" />
            </LinearLayout>
        </LinearLayout>


        <Button
            android:text="@string/timetableBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/room_btn"
            android:textSize="10dp"/>


        <!--</TableRow>-->

            <!--<TableRow-->
                <!--android:layout_height="match_parent"-->
                <!--android:id="@+id/row_02"-->
                <!--android:layout_width="match_parent">-->

                <!--<TextView-->
                    <!--android:text="@string/timeSlot2"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:id="@+id/time2"-->
                    <!--android:textSize="12sp"-->
                    <!--android:background="@drawable/back"-->
                    <!--android:textAlignment="center"-->

                    <!--/>-->

                <!--<TextView-->
                    <!--android:text="@string/class_1"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:background="@drawable/back"-->
                    <!--android:id="@+id/subject_tv_2"-->
                    <!--android:textSize="12sp"-->
                    <!--android:paddingLeft="10dp"-->
                    <!--/>-->
                <!--<TextView-->
                    <!--android:text="@string/date_1"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:background="@drawable/back"-->
                    <!--android:id="@+id/date_tv_2"-->
                    <!--android:textSize="12sp"-->
                    <!--android:textAlignment="center"-->
                    <!--/>-->
            <!--</TableRow>-->

            <!--<TableRow-->
                <!--android:layout_height="match_parent"-->
                <!--android:id="@+id/row_03"-->
                <!--android:layout_width="match_parent">-->

                <!--<TextView-->
                    <!--android:text="@string/timeSlot3"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:id="@+id/time3"-->
                    <!--android:textSize="12sp"-->
                    <!--android:background="@drawable/back"-->
                    <!--android:textAlignment="center"-->

                    <!--/>-->


                <!--<TextView-->
                    <!--android:text="@string/class_1"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:background="@drawable/back"-->
                    <!--android:id="@+id/subject_tv_3"-->
                    <!--android:textSize="12sp"-->
                    <!--android:paddingLeft="10dp"-->
                    <!--/>-->

                <!--<TextView-->
                    <!--android:text="@string/date_1"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:background="@drawable/back"-->
                    <!--android:id="@+id/date_tv_3"-->
                    <!--android:textSize="12sp"-->
                    <!--android:textAlignment="center"-->
                    <!--/>-->
            <!--</TableRow>-->

            <!--<TableRow-->
                <!--android:layout_height="match_parent"-->
                <!--android:id="@+id/row_04"-->
                <!--android:layout_width="match_parent">-->

                <!--<TextView-->
                    <!--android:text="@string/timeSlot4"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:id="@+id/time4"-->
                    <!--android:textSize="12sp"-->
                    <!--android:background="@drawable/back"-->
                    <!--android:textAlignment="center"-->

                    <!--/>-->


                <!--<TextView-->
                    <!--android:text="@string/class_1"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:background="@drawable/back"-->
                    <!--android:id="@+id/subject_tv_4"-->
                    <!--android:textSize="12sp"-->
                    <!--android:paddingLeft="10dp"-->
                    <!--/>-->

                <!--<TextView-->
                    <!--android:text="@string/date_1"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:background="@drawable/back"-->
                    <!--android:id="@+id/date_tv_4"-->
                    <!--android:textSize="12sp"-->
                    <!--android:textAlignment="center"-->
                    <!--/>-->
            <!--</TableRow>-->

            <!--<TableRow-->
                <!--android:layout_height="match_parent"-->
                <!--android:id="@+id/row_05"-->
                <!--android:layout_width="match_parent">-->

                <!--<TextView-->
                    <!--android:text="@string/timeSlot5"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:id="@+id/time5"-->
                    <!--android:textSize="12sp"-->
                    <!--android:background="@drawable/back"-->
                    <!--android:textAlignment="center"-->

                    <!--/>-->


                <!--<TextView-->
                    <!--android:text="@string/class_1"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:background="@drawable/back"-->
                    <!--android:id="@+id/subject_tv_5"-->
                    <!--android:textSize="12sp"-->
                    <!--android:paddingLeft="10dp"-->
                    <!--/>-->

                <!--<TextView-->
                    <!--android:text="@string/date_1"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:background="@drawable/back"-->
                    <!--android:id="@+id/date_tv_5"-->
                    <!--android:textSize="12sp"-->
                    <!--android:textAlignment="center"-->
                    <!--/>-->
            <!--</TableRow>-->

            <!--<TableRow-->
                <!--android:layout_height="match_parent"-->
                <!--android:id="@+id/row_06"-->
                <!--android:layout_width="match_parent">-->

                <!--<TextView-->
                    <!--android:text="@string/timeSlot6"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:id="@+id/time6"-->
                    <!--android:textSize="12sp"-->
                    <!--android:background="@drawable/back"-->
                    <!--android:textAlignment="center"-->

                    <!--/>-->

                <!--<TextView-->
                    <!--android:text="@string/class_1"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:background="@drawable/back"-->
                    <!--android:id="@+id/subject_tv_6"-->
                    <!--android:textSize="12sp"-->
                    <!--android:paddingLeft="10dp"-->
                    <!--/>-->

                <!--<TextView-->
                    <!--android:text="@string/date_1"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:background="@drawable/back"-->
                    <!--android:id="@+id/date_tv_6"-->
                    <!--android:textSize="12sp"-->
                    <!--android:textAlignment="center"-->
                    <!--/>-->
            <!--</TableRow>-->
        <!--</TableLayout>-->

</LinearLayout>
</RelativeLayout>
